add jsonmodel library
edit YTK Source Code where use “TTT”

--- a/YTKNetworkDemo/Podfile
+++ b/YTKNetworkDemo/Podfile
@@ -1,8 +1,10 @@
 target 'YTKNetworkDemo' do
     pod 'YTKNetwork', :path => '../'
+    pod 'OHHTTPStubs'
 end
 
 target 'YTKNetworkDemoTests' do
     pod 'YTKNetwork', :path => '../'
+    pod 'OHHTTPStubs'
 end
 
